# NotaTok

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  pyproject.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/midi/: load.rs  mod.rs  save.rs
crates/core/src/tokenizer/: mod.rs
crates/core/src/tokenizer/abc/: mod.rs  parser.rs
crates/core/src/tokenizer/compound/: mod.rs
crates/core/src/tokenizer/midi_like/: mod.rs
crates/core/src/tokenizer/remi/: mod.rs  vocab.rs
crates/core/tests/: integration.rs
crates/python/: Cargo.toml
crates/python/src/: lib.rs
docs/decisions/: 001-midi-parser.md
docs/plans/: 001-abc-parser.md  002-midi-like-tokenizer.md  003-compound-tokenizer.md
docs/tokenizers/: abc.md  compound.md  midi_like.md  remi.md
python/notatok/: __init__.py  notatok.pyi
research/: compass_artifact_wf-d2f45e66-463f-4c40-950b-8ab59b0fb847_text_markdown.md
